zuban_python/tests/mypylike/tests/classes.test
[case duplicate_base_class_of_tuple]

class A(tuple, tuple): ...  # E: Duplicate base class "tuple"
class A(tuple[int, str], tuple): ...  # E: Duplicate base class "tuple"
class A(tuple, tuple[int, ...]): ...  # E: Duplicate base class "tuple"
class A(tuple[str], tuple[int, ...]): ...  # E: Duplicate base class "tuple"

class A(tuple[str, int]): ...
class A(tuple[str, ...]): ...
class A(tuple): ...
